[project]
name = "maya-stubs"
version = "0.4.1"
description = "Type Annotated Stubs for Autodesk Maya's python APIs"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.uv]
dev-dependencies = [
    "maya-stubgen",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
maya-stubgen = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maya-stubs"]
