[project]
name = "maya-stubs"
version = "0.4.2"
description = "Type Annotated Stubs for Autodesk Maya's python APIs"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
maya-stubgen = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "maya-stubgen",
    "ruff>=0.14.0",
    "snakeviz>=2.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/maya-stubs"]
