[tool.poetry]
name = "maya-docs"
version = "0.1.0"
description = "Alternative Documentation for maya Python APIs"
authors = ["Loïc Pinsard <muream@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
maya-stubgen = { path = "../maya-stubgen/", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
