[tool.poetry]
name = "maya-stubgen"
version = "0.1.0"
description = "Generate stubs and documentation for maya's Python APIs"
authors = ["Loïc Pinsard <muream@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.11.1"
black = "^22.6.0"
cchardet = "^2.1.7"
click = "^8.1.3"
docspec = "^2.0.1"
docspec-python = "^2.0.1"
docspec-to-jinja = { path = "../docspec-to-jinja/", develop = true }
lxml = "^4.9.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
snakeviz = "^2.1.1"

[tool.poetry.scripts]
generate-stubs = 'maya_stubgen.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
