[tool.poetry]
name = "maya-stubs"
version = "0.4.1"
description = "Type Annotated Stubs for Autodesk Maya's python APIs"
authors = ["Loïc Pinsard <muream@gmail.com>"]
license = "MIT"
packages = [{ include = "maya-stubs" }]
repository = "https://www.github.com/Muream/maya-stubs"
keywords = ["stubs", "autodesk", "maya", "cmds", "OpenMaya"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^2.7 || ^3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.7"
include = ["maya-stubs"]

[tool.mypy]
strict = true
python_version = "3.7"
disable_error_code = ["override"]
packages = ["maya"]
